Fix package name

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,6 +2,6 @@
 
 - name: gearman server restart
   service: >
-    name=gearman-server
+    name=gearman-job-server
     state=restarted
   sudo: yes
